# cellscape

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  github-pages.md  index.md  installation.md  labelme.md  quickstart.md  raw_migration.md  single-cell.md  spatial.md
examples/: basic_spatial_plot.py  basic_umap_plot.py  polygon_plot.py  quickstart.py  test_spatial.ipynb
src/cellscape/: __init__.py
src/cellscape/core/: __init__.py  plotting.py  validation.py
src/cellscape/datasets/: __init__.py  labelme.py
src/cellscape/io/: readers.py  writers.py
src/cellscape/single_cell/: __init__.py  plots.py
src/cellscape/spatial/: __init__.py  annotation.py  plots.py  polygon.py
src/cellscape/styles/: __init__.py  palettes.py  themes.py
src/cellscape/widgets/: __init__.py
tests/: test_datasets.ipynb  test_import.py  test_single_cell.ipynb  test_spatial.ipynb  test_spatial.py  test_spatial_helpers.py
